--- a/index.html
+++ b/index.html
@@ -1,68 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-<head>
+    <title>Bare - Start Bootstrap Template</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  </head>
 
-  <title>Bare - Start Bootstrap Template</title>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <!-- Page Content -->
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h1 class="mt-5">Calculations</h1>
+          <div class="row">
+            <div class="col-6">
+              <h3>Inches to Feet</h3>
+              <div class="row">
+                <div class="col-12">
+                  <form>
+                    <div class="form-group">
+                      <label for="inputLength1">Length</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="inputLength1"
+                        placeholder="Length"
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="inputWidth1">Width</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="inputWidth1"
+                        placeholder="Width"
+                      />
+                    </div>
+                    <button
+                      type="submit"
+                      class="btn btn-primary"
+                      onclick="return InchesToFeet()"
+                    >
+                      Submit
+                    </button>
+                  </form>
+                  <div class="row mt-3">
+                    <p>
+                      Length:
+                    </p>
+                    <p id="inchesToFeetLengthResult" class="ml-2"></p>
+                  </div>
+                  <div class="row mt-3">
+                    <p>
+                      Width:
+                    </p>
+                    <p id="inchesToFeetWidthResult" class="ml-2"></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <h3>Feet to Inches</h3>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </nav>
 
-  <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-        <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
-        <ul class="list-unstyled">
-          <li>Bootstrap 4.5.0</li>
-          <li>jQuery 3.5.1</li>
-        </ul>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <ul class="list-unstyled">
+            <li>Bootstrap 4.5.0</li>
+            <li>jQuery 3.5.1</li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.slim.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-</body>
+    <script type="text/javascript">
+      function InchesToFeet() {
+        // LENGTH CONVERSION
+        let inputLength1 = document.getElementById("inputLength1").value;
+        // for rounding:
+        // let lengthResult1 = Math.ceil(inputLength1 / 12);
+        let lengthResult1 = inputLength1 / 12;
+        document.getElementById(
+          "inchesToFeetLengthResult"
+        ).innerHTML = lengthResult1;
+        // return false;
 
+        // WIDTH CONVERSION
+        let inputWidth1 = document.getElementById("inputWidth1").value;
+        // for rounding:
+        // let lengthResult1 = Math.ceil(inputLength1 / 12);
+        let widthResult1 = inputWidth1 / 12;
+        document.getElementById(
+          "inchesToFeetWidthResult"
+        ).innerHTML = widthResult1;
+        return false;
+      }
+    </script>
+  </body>
 </html>
