--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./main.css" rel="stylesheet" />
   </head>
 
   <body>
     <!-- Navigation -->
-    <!-- navbar-dark bg-dark -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
       <div class="container">
         <a class="navbar-brand" href="#">Ric's Kitchen & Bath</a>
@@ -61,7 +61,7 @@
           <h1 class="my-5">Calculators</h1>
           <div class="row">
             <!-- INCHES TO FEET -->
-            <div class="col-md-6 py-3 border border-primary rounded">
+            <div id="inches-to-feet-wrapper" class="col-md-6 my-3 py-3 text-align-center">
               <h3>Inches to Feet</h3>
               <div class="row mx-3 d-flex justify-content-center">
                 <div class="col-5">
@@ -118,9 +118,7 @@
             </div>
 
             <!-- FEET TO INCHES -->
-            <div
-              class="col-md-6 mt-5 py-2 text-align-center border border-primary rounded"
-            >
+            <div id="feet-to-inches-wrapper" class="col-md-6 my-3 py-2 text-align-center">
               <h3>Feet to Inches</h3>
               <div class="row mx-3 d-flex justify-content-center">
                 <div class="col-5">
@@ -173,6 +171,20 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h1 class="my-5">Dragging</h1>
+          <div id="no-drop" class="drag-drop"> #no-drop </div>
+          <div id="yes-drop" class="drag-drop"> #yes-drop </div>
+          <div id="outer-dropzone" class="dropzone">
+            #outer-dropzone
+            <div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- FOOTER -->
     <div class="container mt-5">
       <div class="row">
@@ -188,55 +200,20 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.slim.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script type="module">
+import interact from
+'https://cdn.interactjs.io/v1.9.22/interactjs/index.js'
 
-    <script type="text/javascript">
-      // INCHES TO FEET CALCULATION FN //
-      function InchesToFeet() {
-        // LENGTH CONVERSION //
-        let inputLength1 = document.getElementById("inputLength1").value;
-        // for rounding:
-        // let lengthResult1 = Math.ceil(inputLength1 / 12);
-        let lengthResult1 = (inputLength1 / 12).toFixed(2);
-        document.getElementById(
-          "inchesToFeetLengthResult"
-        ).innerHTML = lengthResult1;
-
-        // WIDTH CONVERSION //
-        let inputWidth1 = document.getElementById("inputWidth1").value;
-        // for rounding:
-        // let lengthResult1 = Math.ceil(inputLength1 / 12);
-        let widthResult1 = (inputWidth1 / 12).toFixed(2);
-        document.getElementById(
-          "inchesToFeetWidthResult"
-        ).innerHTML = widthResult1;
-
-        // SF CALCULATION //
-        let SFresult = (lengthResult1 * widthResult1).toFixed(2);
-        document.getElementById("totalSF").innerHTML = SFresult;
-        return false;
-      }
-
-      // FEET TO INCHES CALCULATION FN //
-      function FeetToInches() {
-        // LENGTH CONVERSION //
-        let inputLength2 = document.getElementById("inputLength2").value;
-        // for rounding:
-        // let lengthResult1 = Math.ceil(inputLength1 / 12);
-        let lengthResult2 = (inputLength2 * 12).toFixed(2);
-        document.getElementById(
-          "feetToInchesLengthResult"
-        ).innerHTML = lengthResult2;
-
-        // WIDTH CONVERSION //
-        let inputWidth2 = document.getElementById("inputWidth2").value;
-        // for rounding:
-        // let lengthResult1 = Math.ceil(inputLength1 / 12);
-        let widthResult2 = (inputWidth2 * 12).toFixed(2);
-        document.getElementById(
-          "feetToInchesWidthResult"
-        ).innerHTML = widthResult2;
-        return false;
-      }
-    </script>
+interact('.item').draggable({
+  listeners: {
+    move (event) {
+      console.log(event.pageX,
+                  event.pageY)
+    }
+  }
+})
+</script>
+    <script src="./drag.js"></script>
+    <script src="./calculations.js"></script>
   </body>
 </html>
