--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ interact('.item').draggable({
   }
 })
 </script>
-    <script src="./drag.js"></script>
+    <script type="module" src="./drag.js"></script>
     <script src="./calculations.js"></script>
   </body>
 </html>
