--- a/index.html
+++ b/index.html
@@ -200,19 +200,19 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.slim.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script type="module">
-import interact from
-'https://cdn.interactjs.io/v1.9.22/interactjs/index.js'
+    <!-- <script type="module">
+      import interact from
+      'https://cdn.interactjs.io/v1.9.22/interactjs/index.js'
 
-interact('.item').draggable({
-  listeners: {
-    move (event) {
-      console.log(event.pageX,
-                  event.pageY)
-    }
-  }
-})
-</script>
+      interact('.item').draggable({
+        listeners: {
+          move (event) {
+            console.log(event.pageX,
+                        event.pageY)
+          }
+        }
+      })
+    </script> -->
     <script type="module" src="./drag.js"></script>
     <script src="./calculations.js"></script>
   </body>
