--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./main.css" rel="stylesheet" />
+    <link href="./drag-test.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -175,12 +176,13 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1 class="my-5">Dragging</h1>
-          <div id="no-drop" class="drag-drop"> #no-drop </div>
+          <img src="http://placekitten.com/500/500" class="item" alt="kitten">
+          <!-- <div id="no-drop" class="drag-drop"> #no-drop </div>
           <div id="yes-drop" class="drag-drop"> #yes-drop </div>
           <div id="outer-dropzone" class="dropzone">
             #outer-dropzone
             <div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -213,7 +215,7 @@
         }
       })
     </script> -->
-    <script type="module" src="./drag.js"></script>
+    <script type="module" src="./drag-test.js"></script>
     <script src="./calculations.js"></script>
   </body>
 </html>
