--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./main.css" rel="stylesheet" />
-    <link href="./drag-test.css" rel="stylesheet" />
+    <!-- <link href="./drag-test.css" rel="stylesheet" /> -->
   </head>
 
   <body>
@@ -176,19 +176,25 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h1 class="my-5">Dragging</h1>
-          <!-- <img src="http://placekitten.com/500/500" class="item" alt="kitten"> -->
-          <div id="no-drop" class="drag-drop"> #no-drop </div>
+          <form>
+            <div class="form-group">
+              <label for="exampleFormControlFile1">Upload Floorplan PDF</label>
+              <input type="file" class="form-control-file" id="exampleFormControlFile1" accept="application/pdf">
+            </div>
+          </form>
+          <img src="http://placekitten.com/250/250" class="item" alt="kitten">
+          <!-- <div id="no-drop" class="drag-drop"> #no-drop </div>
           <div id="yes-drop" class="drag-drop"> #yes-drop </div>
           <div id="outer-dropzone" class="dropzone">
             #outer-dropzone
             <div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
 
     <!-- FOOTER -->
-    <div class="container mt-5">
+    <div id="footer" class="container mt-5">
       <div class="row">
         <div class="col footer text-center text-muted">
           <ul class="list-unstyled">
@@ -199,11 +205,11 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- SCRIPTS -->
     <script src="vendor/jquery/jquery.slim.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="./drag-test.js"></script>
+    <!-- <script type="module" src="./drag-test.js"></script> -->
+    <script type="module" src="./kitten-drag.js"></script>
     <script src="./calculations.js"></script>
-    <script src="./kitten-drag.js"></script>
   </body>
 </html>
