--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 
     <title>Ric's Kitchen & Bath | Dashboard</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- CSS FILES -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./main.css" rel="stylesheet" />
-    <!-- <link href="./drag-test.css" rel="stylesheet" /> -->
   </head>
 
   <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
+    <nav class="navbar navbar-expand-lg static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Ric's Kitchen & Bath</a>
+        <a class="navbar-brand" href="https://dillonplummer.github.io/contractor-tools">Ric's Kitchen & Bath</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,19 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
-                >Dashboard
+              <a class="nav-link" href="https://dillonplummer.github.io/contractor-tools"
+                >Calculators
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Calculators</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Clients</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Folders</a>
+              <a class="nav-link" href="./floorplan-packet-creator.html">Floorplan Packets</a>
             </li>
           </ul>
         </div>
@@ -168,27 +161,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="my-5">Dragging</h1>
-          <form>
-            <div class="form-group">
-              <label for="exampleFormControlFile1">Upload Floorplan PDF</label>
-              <input type="file" class="form-control-file" id="exampleFormControlFile1" accept="application/pdf">
-            </div>
-          </form>
-          <img src="http://placekitten.com/250/250" class="item" alt="kitten">
-          <!-- <div id="no-drop" class="drag-drop"> #no-drop </div>
-          <div id="yes-drop" class="drag-drop"> #yes-drop </div>
-          <div id="outer-dropzone" class="dropzone">
-            #outer-dropzone
-            <div id="inner-dropzone" class="dropzone">#inner-dropzone</div>
-          </div> -->
         </div>
       </div>
     </div>
